# anima

./: Cargo.toml  tokenizer_lib.json
src/: communication.rs  dataset.txt  main.rs  parse.rs
