[package]
name = "anima"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
candle-core = { git = "https://github.com/huggingface/candle", default-features = false, features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle", default-features = false, features = ["cuda"] }
rand = "0.8.0"
# serde = { version = "1.0.228", features = ["derive"] }
# tauri = "2.11.3"
tokenizers = "0.23.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
